crates/vexor-compiler/tests/golden/error/output/unclosed_string.err
parse error at line 3, column 19
  |
3 | export Circle(10)
  |                   ^
invalid string
expected closing `"`